--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
             </h1>
             <div class="author">
                 <h2>YUNO DEV</h2>
-                <p><b>Web Design</b></p>
+                <p><b>Web Page</b></p>
                 <p>
                     
                 </p>
